# montecarloop

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  setup.cfg  setup.py
example/: cache.json  pi_notebook.ipynb  pi_script.py
montecarloop/: __init__.py  dealer.py
tests/: test_dealer.py
