[metadata]
name = montecarloop
version = 0.0.1
author = E. Castedo Ellerman
author_email = castedo@castedo.com
description = Caching and analysis of Monte Carlo simulation estimates.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NovembreLab/montecarloop
license = MIT
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Mathematics
install_requires =
    numpy
    scipy

[options]
package_dir =
packages = find:
python_requires = >=3.7

